project/k8s/front-end.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: 'shafeeanwar/frontend-service:1.0.2'
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-service
  type: ClusterIP
  ports:
    - protocol: TCP
      name: main-port
      port: 8081
      targetPort: 8081
