project/k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-service
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  # NodePort is opened for accessing localDB and production usage is discouraged. Separate DB instance should be used
  type: NodePort
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 32345
